--- a/index.html
+++ b/index.html
@@ -429,53 +429,41 @@
           <img src="./assets/moon.png" alt="imagem de lua" class="moon" />
         </section>
 
-        <section class="contact card flex">
-          <div class="watch">
-            <div class="frame">
+        <section class="contact card interface">
+          <div class="clock-background"></div>
+            <img src="./assets/frame2.png">
+            <div class="clock-menu">
               <ul class="contact-list">
                 <li>
-                  <button class="button">
-                    <a
-                      class="in"
+                  <a class="button"                    
                       href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/"
                       target="_blank"
-                      >Linkedin</a
-                    >
-                  </button>
+                      >Linkedin
+                  </a>
                 </li>
                 <li>
-                  <button class="button">
-                    <a
-                      class="git"
+                  <a class="button"
                       href="https://github.com/rafaelribeiro-dev"
                       target="_blank"
-                      >Github</a
-                    >
-                  </button>
+                      >Github
+                  </a>
                 </li>
                 <li>
-                  <button class="button">
-                    <a
-                      class="insta"
+                  <a class="button"
                       href="https://www.instagram.com/devribeiro/"
                       target="_blank"
-                      >Instagram</a
-                    >
-                  </button>
+                      >Instagram
+                  </a>
                 </li>
                 <li>
-                  <button class="button">
-                    <a
-                      class="whats"
+                  <a class="button"
                       href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?"
                       target="_blank"
-                      >Whatsapp</a
-                    >
-                  </button>
+                      >Whatsapp
+                  </a>
                 </li>
               </ul>
             </div>
-          </div>
         </section>
       </div>
     </main>
