--- a/index.html
+++ b/index.html
@@ -127,9 +127,12 @@
                     <div class="stack-details">
                       <h3 class="stack-title">Stack</h3>
                       <div class="stack-icons">
-                        <img src="./assets/html5.svg" alt="">
+                        <span>HTML5</span>
+                        <span>CSS3</span>
+                        <span>JAVASCRIPT</span>
+                        <!-- <img src="./assets/html5.svg" alt="">
                         <img src="./assets/css3.svg" alt="">
-                        <img src="./assets/js.svg" alt="">
+                        <img src="./assets/js.svg" alt=""> -->
                       </div> 
                     </div>
                     <div class="project-preview">
