teste contact section

--- a/index.html
+++ b/index.html
@@ -432,41 +432,52 @@
           <img src="./assets/moon.png" alt="imagem de lua" class="moon" />
         </section>
 
-        <section class="contact card interface">
-          <div class="clock-background"></div>
-            <img src="./assets/frame2.png">
-            <div class="clock-menu">
-              <ul class="contact-list">
-                <li>
-                  <a class="button"                    
-                      href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/"
-                      target="_blank"
-                      >Linkedin
-                  </a>
-                </li>
-                <li>
-                  <a class="button"
-                      href="https://github.com/rafaelribeiro-dev"
-                      target="_blank"
-                      >Github
-                  </a>
-                </li>
-                <li>
-                  <a class="button"
-                      href="https://www.instagram.com/devribeiro/"
-                      target="_blank"
-                      >Instagram
-                  </a>
-                </li>
-                <li>
-                  <a class="button"
-                      href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?"
-                      target="_blank"
-                      >Whatsapp
-                  </a>
-                </li>
-              </ul>
-            </div>
+        <section class="contact card">
+          <img src="./assets/frame2.png" alt="">
+          <div class="frame">
+            <ul class="contact-list">
+              <li>
+                <button class="button">
+                  <a
+                    class="in"
+                    href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/"
+                    target="_blank"
+                    >Linkedin</a
+                  >
+                </button>
+              </li>
+              <li>
+                <button class="button">
+                  <a
+                    class="git"
+                    href="https://github.com/rafaelribeiro-dev"
+                    target="_blank"
+                    >Github</a
+                  >
+                </button>
+              </li>
+              <li>
+                <button class="button">
+                  <a
+                    class="insta"
+                    href="https://www.instagram.com/devribeiro/"
+                    target="_blank"
+                    >Instagram</a
+                  >
+                </button>
+              </li>
+              <li>
+                <button class="button">
+                  <a
+                    class="whats"
+                    href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?"
+                    target="_blank"
+                    >Whatsapp</a
+                  >
+                </button>
+              </li>
+            </ul>
+          </div>
         </section>
       </div>
     </main>
