teste contact section

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                     <div class="stack-details">
                       <h3 class="stack-title">Stack</h3>
                       <div class="stack-icons">
-                        <img src="./assets/html5.svg" alt="">
-                        <img src="./assets/css3.svg" alt="">
-                        <img src="./assets/js.svg" alt="">
+                        <span>HTML5</span>
+                        <span>CSS3</span>
+                        <span>JAVASCRIPT</span>
                       </div> 
                     </div>
                     <div class="project-preview">
@@ -130,9 +130,6 @@
                         <span>HTML5</span>
                         <span>CSS3</span>
                         <span>JAVASCRIPT</span>
-                        <!-- <img src="./assets/html5.svg" alt="">
-                        <img src="./assets/css3.svg" alt="">
-                        <img src="./assets/js.svg" alt=""> -->
                       </div> 
                     </div>
                     <div class="project-preview">
@@ -433,13 +430,12 @@
         </section>
 
         <section class="contact card">
-          <img src="./assets/frame2.png" alt="">
+          <img src="./assets/frame.png" alt="">
           <div class="frame">
             <ul class="contact-list">
               <li>
                 <button class="button">
                   <a
-                    class="in"
                     href="https://www.linkedin.com/in/rafael-ribeiro-alves-48293aa2/"
                     target="_blank"
                     >Linkedin</a
@@ -449,7 +445,6 @@
               <li>
                 <button class="button">
                   <a
-                    class="git"
                     href="https://github.com/rafaelribeiro-dev"
                     target="_blank"
                     >Github</a
@@ -459,7 +454,6 @@
               <li>
                 <button class="button">
                   <a
-                    class="insta"
                     href="https://www.instagram.com/devribeiro/"
                     target="_blank"
                     >Instagram</a
@@ -469,7 +463,6 @@
               <li>
                 <button class="button">
                   <a
-                    class="whats"
                     href="https://wa.me/5511993943715?text=Olá,%20tudo%20bem?"
                     target="_blank"
                     >Whatsapp</a
