teste contact section

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <div class="project-preview">
                       <h3 class="preview-title">Preview</h3>
                       <div class="preview-icons">
-                        <a href="https://www.frioprime.com.br" target="_blank"><img src="./assets/eye.svg" alt="icone olho"></a>
-                        <a href="https://github.com/rafaelribeiro-dev/frioprime_v2" target="_blank"><img src="./assets/github.svg" alt="icone github"></a>
+                        <a href="https://www.frioprime.com.br" target="_blank">VISUALIZAR</a>
+                        <a href="https://github.com/rafaelribeiro-dev/frioprime_v2" target="_blank">REPOSITÓRIO</a>
                       </div>
                     </div>
                   </div>
@@ -135,8 +135,8 @@
                     <div class="project-preview">
                       <h3 class="preview-title">Preview</h3>
                       <div class="preview-icons">
-                        <a href="https://rafaelribeiro-dev.github.io/portfolio/" target="_blank"><img src="./assets/eye.svg" alt="icone olho"></a>
-                        <a href="https://github.com/rafaelribeiro-dev/portfolio" target="_blank"><img src="./assets/github.svg" alt="icone github"></a>
+                        <a href="https://rafaelribeiro-dev.github.io/portfolio/" target="_blank">VISUALIZAR</a>
+                        <a href="https://github.com/rafaelribeiro-dev/portfolio" target="_blank">REPOSITÓRIO</a>
                       </div>
                     </div>
                   </div>
