--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           </div>
         </section>
 
-        <section class="mail card flex pd-1">
+        <section class="mail card flex">
           <div class="img">
             <img src="./assets/mail.svg" alt="imagem com meu email">
           </div>
