--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
           <img src="./assets/frame.png" alt="">
           <div class="frame">
             <div class="clock">
-              <span>Contatos</span><span>04:30</span>
+              <span>Contatos</span><span data-js="time"></span>
             </div>
             <ul class="contact-list">
               <li>
