teste foto perfil

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;800&display=swap" rel="stylesheet">
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="./assets/fav_icon.png" />
     <!-- SWIPPER JS -->
@@ -66,15 +66,12 @@
             </div>
           </div>
         </section>
-        <section class="resume card flex pd-1">
-          <a href="#" class="fill flex">
-            <h4>Baixe meu Curriculo</h4>
-          </a>
+        <section class="resume card flex">
+         <a href="https://www.devribeiro.com/curriculo.pdf" target="_blank">Baixe meu currículo</a>
         </section>
 
         <section class="hello card flex pd-1">
-         
-          <div class="hello-message flex" data-tilt data-tilt-scale="1.1" data-tilt-full-page-listening >
+          <div class="hello-message flex" data-tilt data-tilt-scale="1" data-tilt-full-page-listening >
             <h2>DevRibeiro</h2>
             <img class="stroke" src="./assets/stroke-brand.svg" alt="devribeiro">
           </div>
