ajustes sessoes mobile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </section>
         <section class="resume card flex">
-         <a href="https://www.devribeiro.com/curriculo.pdf" target="_blank">Baixe meu currículo</a>
+         <a class="text" href="https://www.devribeiro.com/curriculo.pdf" target="_blank">Baixe meu currículo</a>
         </section>
 
         <section class="hello card flex pd-1">
