--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </section>
         <section class="resume card flex">
-         <a class="text" href="https://www.devribeiro.com/curriculo.pdf" target="_blank">Baixe meu currículo</a>
+         <a class="text" href="./assets/Currículo_Rafael.pdf" target="_blank">Baixe meu currículo</a>
         </section>
 
         <section class="hello card flex pd-1">
@@ -146,7 +146,6 @@
 
         <section class="stacks card flex">
           <h2 class="title">Habilidades</h2>
-          <!-- <div class="stacks-icons flex"> -->
             <ul class="stacks-icons flex">
               <li class="html5 ico flex tooltip" data-tooltip="HTML5">
                 <svg width="23" height="26" viewBox="0 0 23 26" fill="none" xmlns="http://www.w3.org/2000/svg">
