ajustando tag de download curriculo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </section>
         <section class="resume card flex">
-         <a class="text" href="./assets/Currículo_Rafael.pdf" download="Curriculo_Rafael.pdf">Baixe meu currículo</a>
+         <a class="text" href="./assets/Currículo_Rafael.pdf" download>Baixe meu currículo</a>
         </section>
 
         <section class="hello card flex pd-1">
