ajustando tag de download curriculo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- FONTS -->
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;800&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <!-- CONTEUDO PRINCIPAL -->
+    <!-- CONTEÚDO PRINCIPAL -->
     <main class="main">
       <div class="apple-grid">
         <section class="brand card ">
@@ -59,7 +59,7 @@
           </div>
         </section>
         <section class="resume card flex">
-         <a class="text" href="assets/Currículo_Rafael.pdf" download>Baixe meu currículo</a>
+         <a class="text" href="curriculo_rafael.pdf" download>Baixe meu currículo</a>
         </section>
 
         <section class="hello card flex pd-1">
@@ -447,10 +447,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
-    <!-- <script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"></script> -->
     <script src="./swiper-bundle.min.js"></script>
     <script src="./vanilla-tilt.min.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
