feat: structuring bento layout

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <!-- CONTEÚDO PRINCIPAL -->
     <main>
       <div class="bento-grid">
-        <section class="profile"></section>
-        <section class="projects"></section>
-        <section class="contacts"></section>
-        <section class="skils"></section>
-        <section class="resume"></section>
-        <section class="theme-mode"></section>
+        <section class="profile card">profile</section>
+        <section class="projects card">projects</section>
+        <section class="contacts card">contacts</section>
+        <section class="skils card">skils</section>
+        <section class="resume card">resume</section>
+        <section class="theme-mode card">theme</section>
       </div>
     </main>
 
