feat: structuring bento layout

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="profile card">profile</section>
         <section class="projects card">projects</section>
         <section class="contacts card">contacts</section>
-        <section class="skils card">skils</section>
+        <section class="skills card">skils</section>
         <section class="resume card">resume</section>
         <section class="theme-mode card">theme</section>
       </div>
