feat: styling bento grid design

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   <body>
     <!-- CONTEÚDO PRINCIPAL -->
     <main>
-      <div class="bento-grid">
-        <section class="profile card">profile</section>
-        <section class="projects card">projects</section>
-        <section class="contacts card">contacts</section>
-        <section class="skills card">skils</section>
-        <section class="resume card">resume</section>
-        <section class="theme-mode card">theme</section>
+      <div class="container-grid">
+        <div class="contacts card">contatos</div>
+        <div class="skills card">habilidades</div>
+        <div class="resume card">curriculo</div>
+        <div class="theme card"></div>
+        <div class="profile card">perfil</div>
+        <div class="projects card">tprojectos</div>
       </div>
     </main>
-
+    <!-- FIM CONTEÚDO PRINCIPAL -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
     <script src="./main.js"></script>
   </body>
