feat: making a theme mode section

--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
     <!-- CONTEÚDO PRINCIPAL -->
     <main>
       <div class="container-grid">
-        <div class="contacts card">contatos</div>
-        <div class="skills card">habilidades</div>
-        <div class="resume card">curriculo</div>
-        <div class="theme card"></div>
-        <div class="profile card">perfil</div>
-        <div class="projects card">tprojectos</div>
+        <div class="contacts card"></div>
+        <div class="skills card pd-1"></div>
+        <div class="resume card pd-1"></div>
+        <div class="theme card pd-1">
+          <div class="toggle-btn">
+            <div class="circle"></div>
+          </div>
+        </div>
+        <div class="profile card">
+          <div class="flip-card"></div>
+        </div>
+        <div class="projects card">
+          <div class="title">Projetos</div>
+        </div>
       </div>
     </main>
     <!-- FIM CONTEÚDO PRINCIPAL -->
