--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           <div class="toggle-btn">
             <div class="circle"></div>
           </div>
+          <div class="dingle-card">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
         </div>
         <div class="profile card">
           <div class="flip-card"></div>
