chore: change style portfolio

--- a/index.html
+++ b/index.html
@@ -24,23 +24,137 @@
     <!-- CONTEÚDO PRINCIPAL -->
     <main>
       <div class="container-grid">
-        <div class="contacts card"></div>
-        <div class="skills card pd-1"></div>
-        <div class="resume card pd-1"></div>
-        <div class="theme card pd-1">
+        <div class="contacts card">
+          <div class="container-contacts">
+            <div class="flip-contact">
+              <div class="front"></div>
+              <div class="back"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skills card pd-1">
+          <div class="skills-title">
+            <div class="content">
+              <p>Habilidades</p>
+            </div>
+          </div>
+          <div class="skills-container">
+            <ul>
+              <li>html</li>
+              <li>css</li>
+              <li>javascript</li>
+              <li>git</li>
+              <li>github</li>
+              <li>reactjs</li>
+              <li>nodejs</li>
+              <li>mongodb</li>
+              <li>postgres</li>
+              <li>figma</li>
+            </ul>
+          </div>
+        </div>
+        <div class="resume card pd-1">
+          <img
+            src="./assets/system-buttons.svg"
+            alt="botões de sistema estilo macintosh"
+          />
+        </div>
+        <div class="select-mode card pd-1">
           <div class="toggle-btn">
             <div class="circle"></div>
           </div>
-          <div class="dingle-card">
-            <div class="front"></div>
-            <div class="back"></div>
+          <div class="avatar">
+            <div class="memoji-face">
+              <div class="front">
+                <img
+                  src="./assets/memoji-glasses.svg"
+                  alt="avatar sem oculos"
+                />
+              </div>
+              <div class="back">
+                <img
+                  src="./assets/memoji-without-glasses.svg"
+                  alt="avatar sem oculos"
+                />
+              </div>
+            </div>
           </div>
         </div>
         <div class="profile card">
-          <div class="flip-card"></div>
+          <div class="single-card">
+            <div class="front-card">
+              <div class="availability">
+                <div class="status">
+                  <p>Disponível para trabalhar</p>
+                </div>
+                <div class="profile-name"></div>
+                <div class="profile-office"></div>
+              </div>
+              <div class="plus-icon">
+                <svg
+                  width="30"
+                  height="28"
+                  viewBox="0 0 30 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M29.7172 13.9453C29.7172 21.5605 23.0177 27.8906 14.9581 27.8906C6.88398 27.8906 0.198975 21.5742 0.198975 13.959C0.198974 6.33008 6.88398 3.3347e-07 14.9581 0C23.0177 -3.32872e-07 29.7172 6.31641 29.7172 13.9453ZM14.9725 20.6172C15.7105 20.6172 16.2025 20.125 16.2025 19.4141V15.1348H20.746C21.4839 15.1348 22.0193 14.6562 22.0193 13.959C22.0193 13.248 21.4984 12.7559 20.746 12.7559H16.2025V8.46289C16.2025 7.76562 15.7105 7.25977 14.9725 7.25977C14.2201 7.25977 13.6992 7.76562 13.6992 8.46289V12.7559H9.17019C8.41777 12.7559 7.88239 13.248 7.88239 13.959C7.88239 14.6562 8.41777 15.1348 9.17019 15.1348H13.6992V19.4141C13.6992 20.125 14.2201 20.6172 14.9725 20.6172Z"
+                    fill="#F0F1F6"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="back-card">
+              <div class="text">
+                <p>
+                  Olá! É uma satisfação compartilhar minha jornada profissional
+                  e destacar minhas habilidades e experiências. Aqui, você
+                  encontrará exemplos do meu trabalho e o progresso das minhas
+                  habilidades na programação.
+                </p>
+                <p>
+                  Tenho formação em Análise e Desenvolvimento de Sistemas e
+                  acumulo 15 anos de experiência no setor de vendas, onde
+                  construí uma base sólida no atendimento ao cliente, tanto
+                  presencialmente quanto por telefone.
+                </p>
+                <p>
+                  Atualmente, estou em transição de carreira para perseguir
+                  minha paixão pelo desenvolvimento front-end. Paralelamente,
+                  estou também estudando o desenvolvimento back-end com
+                  dedicação, buscando adquirir as habilidades essenciais para
+                  contribuir de maneira significativa com equipes de
+                  desenvolvimento.
+                </p>
+                <p>
+                  Seja bem-vindo para explorar os exemplos do meu trabalho e
+                  acompanhar minha jornada na programação.
+                </p>
+                <p>
+                  Qualquer dúvida, sugestão ou simplesmene bater um papo me
+                  chama no whatsapp.
+                </p>
+              </div>
+              <div class="close-icon">
+                <svg
+                  width="30"
+                  height="28"
+                  viewBox="0 0 30 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M29.7172 13.9453C29.7172 21.5605 23.0177 27.8906 14.9581 27.8906C6.88398 27.8906 0.198975 21.5742 0.198975 13.959C0.198974 6.33008 6.88398 3.3347e-07 14.9581 0C23.0177 -3.32872e-07 29.7172 6.31641 29.7172 13.9453ZM14.9725 20.6172C15.7105 20.6172 16.2025 20.125 16.2025 19.4141V15.1348H20.746C21.4839 15.1348 22.0193 14.6562 22.0193 13.959C22.0193 13.248 21.4984 12.7559 20.746 12.7559H16.2025V8.46289C16.2025 7.76562 15.7105 7.25977 14.9725 7.25977C14.2201 7.25977 13.6992 7.76562 13.6992 8.46289V12.7559H9.17019C8.41777 12.7559 7.88239 13.248 7.88239 13.959C7.88239 14.6562 8.41777 15.1348 9.17019 15.1348H13.6992V19.4141C13.6992 20.125 14.2201 20.6172 14.9725 20.6172Z"
+                    fill="#F0F1F6"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="projects card">
-          <div class="title">Projetos</div>
+          <div class="title"></div>
         </div>
       </div>
     </main>
