chore: change style portfolio

--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
         </div>
         <div class="projects card">
           <div class="title"></div>
+          nesses proximos meses enfrentarei o mair desafio que tenho, ele dira
+          se ainda continuarei a batalhar pela programacao ou terei que me
+          contentar em ser apenas um tentador.
         </div>
       </div>
     </main>
